# mcell1_src

./: README.md  git.md
build_main/: CMakeLists.txt  ihp13.yaml  ihp130n_tech.txt  node.lic  readme.txt  rename.sh  test.sh
build_test/top/: CMakeLists.txt  run.sh  test.sh  var.sh
src/ext_clipper2/: clipper.core.h  clipper.engine.cpp  clipper.export.h  clipper.h  clipper.minkowski.h  clipper.offset.cpp  clipper.rectclip.cpp  clipper.rectclip.h
src/ext_gdstk/gdstk/: cell.cpp  library.h  rawcell.cpp
src/ext_mkl/: mkl_blas_omp_offload.h  mkl_vml.f90  mkl_vml_functions.h
src/ext_mkl/ia32/: blas95.mod  f95_precision.mod  lapack95.mod  mkl_service.mod
src/ext_mkl/intel64/ilp64/: blas95.mod  f95_precision.mod  lapack95.mod  mkl_service.mod
src/ext_mkl/intel64/lp64/: blas95.mod  f95_precision.mod  lapack95.mod  mkl_service.mod
src/ext_poly2tri/: advancing_front.h  sweep.cc
src/ext_zlib/contrib/minizip/: ioapi.h
src/mcell_command_line/: mcell_command_line.cpp  mcell_command_line.h
src/mcell_components/: mcell_component.cpp  mcell_component.h  mcell_inductor_spiral.cpp  mcell_inductor_spiral.h  mcell_inductor_symmetric.cpp  mcell_inductor_symmetric.h  mcell_transformer1o1.cpp  mcell_transformer1o1.h  mcell_transformer1o2.cpp  mcell_transformer1o2.h  mcell_transformer2o1.cpp  mcell_transformer2o1.h  mcell_transformer2o2.cpp  mcell_transformer2o2.h  mcell_transformer_spiral.cpp  mcell_transformer_spiral.h
src/mcell_error/: mcell_error.h
src/mcell_fast_henry/: fast_henry_lib.cpp  fast_henry_lib.h  mcell_fast_henry.cpp  mcell_fast_henry.h
src/mcell_global/: mcell_global.h
src/mcell_library/: mcell_library.cpp  mcell_library.h
src/mcell_main/: mcell.cpp
src/mcell_technology/: mcell_technology.cpp  mcell_technology.h
src/mlic_license/: mlic_license.h
src/test/top/: mcell.cpp
